--- a/src/app/components/dashboard/crear-convenio/crear-convenio.component.html
+++ b/src/app/components/dashboard/crear-convenio/crear-convenio.component.html
@@ -1,4 +1,5 @@
-<div class="container pt-4">
+hola
+<!-- <div class="container pt-4">
     <div class="row">
         <div class="col-lg-6 offset-lg-3">
             <div class="card text-center">
@@ -46,7 +47,7 @@
                                     <option value="2">Two</option>
                                     <option value="3">Three</option>
                                 </select>
-                                
+
                             </div>
                             <div class="col">
                                 <input type="text" class="form-control form-control-lg" formControlName="apellido"
@@ -109,4 +110,4 @@
             </div>
         </div>
     </div>
-</div>
+</div> -->
